# AssppWeb

./: Dockerfile  compose.yml
backend-rs/: .gitignore  Cargo.toml
backend-rs/crates/asspp-core/: Cargo.toml
backend-rs/crates/asspp-core/src/: bag.rs  config.rs  download.rs  error.rs  lib.rs  manifest.rs  plist_util.rs  search.rs  security.rs  sinf.rs  storage.rs  types.rs  wisp.rs
backend-rs/crates/asspp-standalone/: Cargo.toml
backend-rs/crates/asspp-standalone/src/: main.rs  state.rs
backend-rs/crates/asspp-standalone/src/routes/: bag.rs  downloads.rs  install.rs  mod.rs  packages.rs  search.rs  settings.rs  wisp.rs
backend-rs/crates/asspp-standalone/src/services/: download_manager.rs  mod.rs  sinf_injector.rs
backend-rs/crates/asspp-worker/: Cargo.toml  README.md  wrangler.example.toml
backend-rs/crates/asspp-worker/src/: lib.rs
backend-rs/crates/asspp-worker/src/durable_objects/: mod.rs  wisp_proxy.rs
backend-rs/crates/asspp-worker/src/routes/: bag.rs  downloads.rs  install.rs  mod.rs  packages.rs  search.rs  settings.rs  wisp.rs
backend-rs/crates/asspp-worker/src/services/: download_manager.rs  kv_metadata.rs  mod.rs  r2_storage.rs
frontend/src/components/Download/: AddDownload.tsx
frontend/src/components/Search/: SearchPage.tsx
