[workspace]
resolver = "2"
members = ["crates/asspp-core", "crates/asspp-standalone"]
exclude = ["crates/asspp-worker"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
plist = "1"
