[package]
name = "asspp-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
asspp-core = { path = "../asspp-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
plist = "1"
worker = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "WritableStream",
  "WritableStreamDefaultWriter",
  "ReadableStream",
  "ReadableStreamDefaultReader",
] }
futures-util = "0.3"
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2"
